--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,9 @@ nav {
 .mobile-menu {
     background-color: var(--white);
     position: absolute;
-    top: 60px;
+    top: 61px;
+    left: 0;
+    width: 100%;
     padding: 24px;
 }
 .mobile-menu a {
@@ -160,6 +162,9 @@ nav {
     color: var(--hospital-green);
 }
 /* Shopping cart */
+#shoppingCartContainer {
+    padding: 8px 24px;
+}
 .title-container {
     display: flex;
 }
@@ -233,13 +238,87 @@ nav {
     align-items: center;
     justify-content: center;
 }
-.product-detail {
+/* Product Detail and shopping cart */
+aside {
     background-color: var(--white);
     width: 360px;
-    padding: 8px 24px;
     box-sizing: border-box;
     position: absolute;
     right: 0;
+}
+
+/* Product detail */
+.primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+}
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.product-detail-close {
+    background: var(--white);
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+}
+.product-detail-close:hover {
+    cursor: pointer;
+}
+#productDetail > img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+#productDetail .product-info {
+    margin: 24px 24px 0 24px;
+}
+#productDetail .product-info p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+}
+#productDetail .product-info p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+#productDetail .product-info p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+.dots {
+text-align: center;
+}
+.dot {
+    cursor: pointer;
+    height: 8px;
+    width: 8px;
+    margin: 0 2px;
+    background-color: var(--very-light-pink);
+    border-radius: 50%;
+    display: inline-block;
+}
+.dots span:nth-child(1) {
+    background-color: var(--hospital-green);
 }
 /* Products list */
 .cards-container {
@@ -258,26 +337,26 @@ nav {
     border-radius: 20px;
     object-fit: cover;
 }
-.product-info {
+.product-card .product-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 12px;
 }
-.product-info figure {
+.product-card .product-info figure {
     margin: 0;
 }
-.product-info figure img {
+.product-card .product-info figure img {
     width: 35px;
     height: 35px;
 }
-.product-info div p:nth-child(1) {
+.product-card .product-info div p:nth-child(1) {
     font-weight: bold;
     font-size: var(--sd);
     margin-top: 0;
     margin-bottom: 4px;
 }
-.product-info div p:nth-child(2) {
+.product-card .product-info div p:nth-child(2) {
     font-size: var(--md);
     margin-top: 0px;
     margin-bottom: 0px;
@@ -299,7 +378,7 @@ nav {
     .desktop-menu {
         display: none;
     }
-    .product-detail {
+    #productDetail {
         width: 100%;
     }
     .cards-container {
