--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,9 @@ nav {
     font-size: var(--sm);
     margin-right: 12px;
 }
+.navbar-shopping-cart:hover {
+    cursor: pointer;
+}
 .navbar-shopping-cart {
     position: relative;
 }
@@ -248,6 +251,7 @@ aside {
 }
 
 /* Product detail */
+
 .primary-button {
     background-color: var(--hospital-green);
     border-radius: 8px;
@@ -380,6 +384,7 @@ text-align: center;
     }
     #productDetail {
         width: 100%;
+        height: 100%;
     }
     .cards-container {
         grid-template-columns: repeat(auto-fill, 140px);
