Solving dark background interactive

--- a/styles.css
+++ b/styles.css
@@ -416,6 +416,7 @@ text-align: center;
         display: none;
     }
     #productDetail {
+        border-bottom-left-radius: 0;
         width: 100%;
         height: 100%;
     }
